--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 10:11:36 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 10:12:30 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -1077,7 +1077,7 @@ Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Brian Harman E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Joaquin Niemann E
