--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 10:54:57 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 10:55:43 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,10 +214,10 @@ Not started</td>
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Luke List E
+      <td class="greyout leftborder">Patrick Reed E
 Not started</td>
-      <td class="greyout">Patrick Reed E
-Not started</td>
+      <td class="greyout">Luke List +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
