--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 10:57:33 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 10:58:38 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,23 +140,7 @@ body {
   </thead>
   <tbody>
     <tr>
-      <td class="bigbold">Neil Hardy-Not Paid</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
-      <td>Justin Thomas E
-Not started</td>
-      <td>Corey Conners E
-Not started</td>
-      <td>Jordan Spieth E
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Rory McIlroy E
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea-Not Paid</td>
+      <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
 Not started</td>
@@ -300,7 +284,7 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson-Not Paid</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">0</td>
       <td>Tommy Fleetwood(W) E
 Not started</td>
@@ -380,7 +364,7 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon-Not Paid</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">0</td>
       <td>Jordan Spieth(W) E
 Not started</td>
@@ -393,6 +377,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Jon Rahm E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy-Not Paid</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith(W) E
+Not started</td>
+      <td>Corey Conners E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Justin Thomas E
 Not started</td>
     </tr>
   </tbody>
