--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:09:37 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:10:33 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ Not started</td>
       <td class="greyout leftborder">Corey Conners E
 Not started</td>
       <td class="greyout">Shane Lowry E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -201,7 +201,7 @@ Not started</td>
       <td class="greyout leftborder">Patrick Reed E
 Not started</td>
       <td class="greyout">Luke List +1
-+1 thru 1</td>
++1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -233,7 +233,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau E
 Not started</td>
       <td class="greyout">Shane Lowry E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -249,7 +249,7 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -325,7 +325,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Shane Lowry E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Cameron Smith E
 Not started</td>
       <td class="greyout">Will Zalatoris E
