--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:19:39 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:20:54 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -324,7 +324,7 @@ Not started</td>
 Not started</td>
       <td>Corey Conners E
 Not started</td>
-      <td>Russell Henley E
+      <td>Tyrrell Hatton E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
@@ -546,9 +546,9 @@ Not started</td>
 Not started</td>
       <td>Corey Conners E
 Not started</td>
+      <td>Talor Gooch E
+E thru 1</td>
       <td>Brooks Koepka E
-Not started</td>
-      <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
