--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:21:48 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:22:42 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,38 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-1</td>
+      <td>Talor Gooch -1
+-1 thru 2</td>
+      <td>Cameron Smith(W) E
+Not started</td>
+      <td>Corey Conners E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Scottie Scheffler E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-1</td>
+      <td>Talor Gooch -1
+-1 thru 2</td>
+      <td>Jon Rahm(W) E
+Not started</td>
+      <td>Corey Conners E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Hideki Matsuyama E
+Not started</td>
+      <td class="greyout">Cameron Smith E
+Not started</td>
+    </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">0</td>
@@ -353,7 +385,7 @@ Not started</td>
       <td>Justin Thomas(W) E
 Not started</td>
       <td>Daniel Berger E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Viktor Hovland E
@@ -449,7 +481,7 @@ Not started</td>
       <td>Corey Conners(W) E
 Not started</td>
       <td>Daniel Berger E
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre E
 Not started</td>
       <td>Collin Morikawa E
@@ -537,22 +569,6 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas E
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
-      <td>Corey Conners E
-Not started</td>
-      <td>Talor Gooch E
-E thru 1</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Scottie Scheffler E
 Not started</td>
     </tr>
     <tr>
@@ -940,22 +956,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">0</td>
-      <td>Jon Rahm(W) E
-Not started</td>
-      <td>Corey Conners E
-Not started</td>
-      <td>Talor Gooch E
-E thru 1</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td class="greyout leftborder">Hideki Matsuyama E
-Not started</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
@@ -1077,7 +1077,7 @@ Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Brian Harman E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Joaquin Niemann E
