--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:21:48 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:22:42 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau E
 Not started</td>
       <td class="greyout">Daniel Berger E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -287,7 +287,7 @@ Not started</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">0</td>
       <td>Tommy Fleetwood(W) E
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas E
 Not started</td>
       <td>Cameron Smith E
@@ -357,7 +357,7 @@ Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Daniel Berger E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Robert MacIntyre E
