--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:30:59 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:31:54 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -144,16 +144,16 @@ body {
       <td class="bigbold">-1</td>
       <td>Talor Gooch -1
 -1 thru 2</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Scottie Scheffler E
+      <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -168,8 +168,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama E
 Not started</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -229,7 +229,7 @@ Not started</td>
       <td>Tony Finau E
 Not started</td>
       <td>Shane Lowry E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -278,10 +278,10 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Cameron Smith E
+      <td class="greyout leftborder">Tiger Woods E
 Not started</td>
-      <td class="greyout">Tiger Woods E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -310,10 +310,10 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Cameron Smith E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
@@ -340,12 +340,12 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm E
 Not started</td>
-      <td>Cameron Smith E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -360,8 +360,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -404,12 +404,12 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td>Cameron Smith E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -494,18 +494,18 @@ Not started</td>
     <tr>
       <td class="bigbold">BCREAMED</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Sam Burns E
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen E
+      <td>Louis Oosthuizen E
 Not started</td>
-      <td class="greyout">Scottie Scheffler E
+      <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -536,8 +536,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -590,18 +590,18 @@ Not started</td>
     <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Shane Lowry E
-E thru 1</td>
-      <td class="greyout">Scottie Scheffler E
+      <td>Shane Lowry E
+E thru 2</td>
+      <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -638,18 +638,18 @@ Not started</td>
     <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas E
+      <td class="greyout leftborder">Justin Thomas E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -662,10 +662,10 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Cameron Smith E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -718,18 +718,18 @@ Not started</td>
     <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Marc Leishman E
 Not started</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Justin Thomas E
+      <td class="greyout leftborder">Justin Thomas E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -741,11 +741,11 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Shane Lowry E
-E thru 1</td>
-      <td class="greyout leftborder">Cameron Smith E
+E thru 2</td>
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
@@ -776,8 +776,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -830,18 +830,18 @@ Not started</td>
     <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Shane Lowry E
-E thru 1</td>
-      <td class="greyout leftborder">Hideki Matsuyama E
+E thru 2</td>
+      <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout">Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -856,24 +856,24 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Russell Henley E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Scottie Scheffler E
+      <td>Scottie Scheffler E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -884,12 +884,12 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td>Cameron Smith E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td class="greyout leftborder">Bubba Watson E
 Not started</td>
-      <td class="greyout">Bubba Watson E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -901,7 +901,7 @@ Not started</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Shane Lowry E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Louis Oosthuizen E
 Not started</td>
       <td class="greyout">Jordan Spieth E
@@ -933,7 +933,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Shane Lowry E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
       <td class="greyout">Jordan Spieth E
@@ -950,10 +950,10 @@ Not started</td>
 Not started</td>
       <td>Scottie Scheffler E
 Not started</td>
-      <td class="greyout leftborder">Cameron Smith E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -967,9 +967,9 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Shane Lowry E
-E thru 1</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
+E thru 2</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -1013,11 +1013,11 @@ Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Shane Lowry E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Louis Oosthuizen E
 Not started</td>
-      <td class="greyout">Cameron Smith E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -1044,40 +1044,40 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td>Cameron Smith E
+      <td>Justin Thomas E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
+      <td class="greyout leftborder">Tiger Woods E
 Not started</td>
-      <td class="greyout">Tiger Woods E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Scottie Scheffler E
+      <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">0</td>
       <td>Shane Lowry(W) E
-E thru 1</td>
+E thru 2</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Brian Harman E
-E thru 4</td>
+E thru 5</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Joaquin Niemann E
