--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:30:59 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:31:54 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ Not started</td>
       <td class="greyout leftborder">Corey Conners E
 Not started</td>
       <td class="greyout">Shane Lowry E
-E thru 1</td>
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -176,16 +176,16 @@ Not started</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
 Not started</td>
-      <td>Cameron Smith E
-Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Sam Burns E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout">Corey Conners E
+      <td class="greyout leftborder">Corey Conners E
 Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -201,7 +201,7 @@ Not started</td>
       <td class="greyout leftborder">Patrick Reed E
 Not started</td>
       <td class="greyout">Luke List +1
-+1 thru 2</td>
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -233,7 +233,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau E
 Not started</td>
       <td class="greyout">Shane Lowry E
-E thru 1</td>
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -249,7 +249,7 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry E
-E thru 1</td>
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -270,18 +270,18 @@ E thru 1</td>
     <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
+      <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout">Patrick Cantlay E
+      <td class="greyout leftborder">Patrick Cantlay E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -290,14 +290,14 @@ Not started</td>
 E thru 1</td>
       <td>Justin Thomas E
 Not started</td>
-      <td>Cameron Smith E
-Not started</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Joaquin Niemann E
+      <td>Joaquin Niemann E
 Not started</td>
-      <td class="greyout">Rory McIlroy E
+      <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -325,11 +325,11 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Shane Lowry E
-E thru 1</td>
-      <td class="greyout leftborder">Cameron Smith E
+E thru 2</td>
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
@@ -382,18 +382,18 @@ Not started</td>
     <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas E
+      <td class="greyout leftborder">Justin Thomas E
 Not started</td>
+      <td class="greyout">Cameron Smith(W) +2
++2 thru 1</td>
     </tr>
   </tbody>
 </table>
