--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:43:32 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:44:26 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,54 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 2</td>
+      <td>Justin Thomas(W) E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Will Zalatoris E
+Not started</td>
+      <td class="greyout">Tony Finau E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-1</td>
+      <td>Tommy Fleetwood(W) -1
+-1 thru 2</td>
+      <td>Justin Thomas E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td class="greyout leftborder">Joaquin Niemann +1
++1 thru 1</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 2</td>
+      <td>Corey Conners(W) E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Robert MacIntyre E
+Not started</td>
+    </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
@@ -167,7 +215,7 @@ Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td class="greyout leftborder">Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Russell Henley E
 Not started</td>
     </tr>
@@ -201,7 +249,7 @@ Not started</td>
       <td class="greyout leftborder">Patrick Reed E
 Not started</td>
       <td class="greyout">Luke List +1
-+1 thru 3</td>
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -252,22 +300,6 @@ Not started</td>
 E thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td class="greyout leftborder">Tony Finau E
-Not started</td>
-      <td class="greyout">Daniel Berger E
-E thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
       <td>Collin Morikawa E
@@ -284,22 +316,6 @@ Not started</td>
 +2 thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">0</td>
-      <td>Tommy Fleetwood(W) E
-E thru 1</td>
-      <td>Justin Thomas E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Joaquin Niemann E
-Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
-Not started</td>
-      <td class="greyout">Cameron Smith +2
-+2 thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
@@ -313,7 +329,7 @@ Not started</td>
       <td class="greyout leftborder">Corey Conners E
 Not started</td>
       <td class="greyout">Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -345,22 +361,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Tony Finau E
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Daniel Berger E
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Robert MacIntyre E
 Not started</td>
     </tr>
     <tr>
