--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:43:32 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:44:26 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,10 +140,42 @@ body {
   </thead>
   <tbody>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 2</td>
+      <td>Justin Thomas(W) E
+Not started</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Xander Schauffele E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 2</td>
+      <td>Corey Conners(W) E
+Not started</td>
+      <td>Robert MacIntyre E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-1</td>
       <td>Talor Gooch -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Corey Conners E
 Not started</td>
       <td>Brooks Koepka E
@@ -159,7 +191,7 @@ Not started</td>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-1</td>
       <td>Talor Gooch -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Corey Conners E
@@ -170,6 +202,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Cameron Smith +2
 +2 thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-1</td>
+      <td>Brian Harman -1
+-1 thru 6</td>
+      <td>Shane Lowry(W) E
+E thru 2</td>
+      <td>Sam Burns E
+Not started</td>
+      <td>Corey Conners E
+Not started</td>
+      <td class="greyout leftborder">Viktor Hovland E
+Not started</td>
+      <td class="greyout">Joaquin Niemann +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -245,7 +293,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Justin Thomas E
@@ -279,7 +327,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Tiger Woods E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Cameron Smith +2
 +2 thru 1</td>
     </tr>
@@ -380,22 +428,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-Not started</td>
-      <td>Daniel Berger E
-E thru 1</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Xander Schauffele E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
@@ -476,22 +508,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) E
-Not started</td>
-      <td>Daniel Berger E
-E thru 1</td>
-      <td>Robert MacIntyre E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">BCREAMED</td>
       <td class="bigbold">0</td>
       <td>Sam Burns E
@@ -501,7 +517,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Scottie Scheffler E
 Not started</td>
       <td class="greyout">Cameron Smith(W) +2
@@ -532,10 +548,10 @@ Not started</td>
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Joaquin Niemann E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+      <td class="greyout leftborder">Joaquin Niemann +1
++1 thru 1</td>
       <td class="greyout">Cameron Smith +2
 +2 thru 1</td>
     </tr>
@@ -617,7 +633,7 @@ Not started</td>
       <td class="greyout leftborder">Gary Woodland E
 Not started</td>
       <td class="greyout">Tiger Woods E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -687,7 +703,7 @@ Not started</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
       <td>Tiger Woods(W) E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
@@ -755,7 +771,7 @@ Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
@@ -903,7 +919,7 @@ Not started</td>
       <td>Shane Lowry E
 E thru 2</td>
       <td class="greyout leftborder">Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -995,7 +1011,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
@@ -1015,7 +1031,7 @@ Not started</td>
       <td>Shane Lowry E
 E thru 2</td>
       <td class="greyout leftborder">Louis Oosthuizen E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Cameron Smith +2
 +2 thru 1</td>
     </tr>
@@ -1047,7 +1063,7 @@ Not started</td>
       <td>Justin Thomas E
 Not started</td>
       <td class="greyout leftborder">Tiger Woods E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Cameron Smith +2
 +2 thru 1</td>
     </tr>
@@ -1066,22 +1082,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Cameron Smith(W) +2
 +2 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">0</td>
-      <td>Shane Lowry(W) E
-E thru 2</td>
-      <td>Sam Burns E
-Not started</td>
-      <td>Corey Conners E
-Not started</td>
-      <td>Brian Harman E
-E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland E
-Not started</td>
-      <td class="greyout">Joaquin Niemann E
-Not started</td>
     </tr>
   </tbody>
 </table>
