--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:54:32 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:55:25 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,39 +143,23 @@ body {
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Daniel Berger -1
--1 thru 2</td>
-      <td>Justin Thomas(W) E
-Not started</td>
+-1 thru 3</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
+      <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout">Tony Finau E
+      <td class="greyout leftborder">Tony Finau E
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-1</td>
-      <td>Tommy Fleetwood(W) -1
--1 thru 2</td>
-      <td>Justin Thomas E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td class="greyout leftborder">Joaquin Niemann +1
+      <td class="greyout">Justin Thomas(W) +1
 +1 thru 1</td>
-      <td class="greyout">Cameron Smith +2
-+2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Daniel Berger -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Corey Conners(W) E
 Not started</td>
       <td>Collin Morikawa E
@@ -190,18 +174,18 @@ Not started</td>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Tyrrell Hatton E
 Not started</td>
-      <td class="greyout leftborder">Corey Conners E
+      <td>Corey Conners E
 Not started</td>
-      <td class="greyout">Shane Lowry E
-E thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 1</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -210,14 +194,14 @@ E thru 2</td>
 Not started</td>
       <td>Dustin Johnson E
 Not started</td>
-      <td>Justin Thomas E
-Not started</td>
       <td>Corey Conners E
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen E
+      <td>Louis Oosthuizen E
 E thru 1</td>
-      <td class="greyout">Russell Henley E
+      <td class="greyout leftborder">Russell Henley E
 Not started</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -233,7 +217,7 @@ Not started</td>
       <td class="greyout leftborder">Corey Conners E
 Not started</td>
       <td class="greyout">Cameron Smith +2
-+2 thru 1</td>
++2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -248,40 +232,40 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Patrick Reed E
 Not started</td>
-      <td class="greyout">Luke List +1
-+1 thru 4</td>
+      <td class="greyout">Luke List +2
++2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland(W) E
 Not started</td>
-      <td>Justin Thomas E
-Not started</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay E
+      <td>Patrick Cantlay E
 Not started</td>
-      <td class="greyout">Sungjae Im E
+      <td class="greyout leftborder">Sungjae Im E
 Not started</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Scottie Scheffler E
 Not started</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Tony Finau E
+      <td>Tony Finau E
 Not started</td>
-      <td class="greyout">Shane Lowry E
-E thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 1</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -296,8 +280,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Shane Lowry E
-E thru 2</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -313,39 +297,39 @@ Not started</td>
       <td class="greyout leftborder">Patrick Cantlay E
 Not started</td>
       <td class="greyout">Cameron Smith(W) +2
-+2 thru 1</td>
++2 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">0</td>
+      <td>Tommy Fleetwood(W) -1
+-1 thru 3</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td>Justin Thomas +1
++1 thru 1</td>
+      <td class="greyout leftborder">Joaquin Niemann +1
++1 thru 1</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Corey Conners E
+      <td>Corey Conners E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen E
+      <td class="greyout leftborder">Louis Oosthuizen E
 E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-Not started</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Shane Lowry E
-E thru 2</td>
-      <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
-      <td class="greyout">Cameron Smith +2
-+2 thru 1</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
@@ -390,10 +374,26 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
-Not started</td>
+      <td class="greyout leftborder">Justin Thomas +1
++1 thru 1</td>
       <td class="greyout">Cameron Smith(W) +2
-+2 thru 1</td>
++2 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">1</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td>Justin Thomas(W) +1
++1 thru 1</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 thru 3</td>
+      <td class="greyout">Cameron Smith +2
++2 thru 2</td>
     </tr>
   </tbody>
 </table>
