--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:56:20 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 11:57:14 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -170,22 +170,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-1</td>
-      <td>Brian Harman -1
--1 thru 6</td>
-      <td>Sam Burns E
-Not started</td>
-      <td>Corey Conners E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td class="greyout leftborder">Shane Lowry(W) +1
-+1 thru 3</td>
-      <td class="greyout">Joaquin Niemann +1
-+1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -1050,6 +1034,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Cameron Smith(W) +2
 +2 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">0</td>
+      <td>Sam Burns E
+Not started</td>
+      <td>Corey Conners E
+Not started</td>
+      <td>Brian Harman E
+E thru 7</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td class="greyout leftborder">Shane Lowry(W) +1
++1 thru 3</td>
+      <td class="greyout">Joaquin Niemann +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
