--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 12:00:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:02:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,23 +143,39 @@ body {
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Daniel Berger -1
--1 thru 3</td>
+-1 thru 6</td>
+      <td>Justin Thomas(W) E
+E thru 4</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Tony Finau E
+      <td class="greyout">Tony Finau +1
++1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-1</td>
+      <td>Joaquin Niemann -1
+-1 thru 5</td>
+      <td>Justin Thomas E
+E thru 4</td>
+      <td>Cameron Smith E
+E thru 6</td>
+      <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 1</td>
+      <td class="greyout leftborder">Rory McIlroy E
+Not started</td>
+      <td class="greyout">Tommy Fleetwood(W) +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Daniel Berger -1
--1 thru 3</td>
+-1 thru 6</td>
       <td>Corey Conners(W) E
 Not started</td>
       <td>Collin Morikawa E
@@ -174,18 +190,18 @@ Not started</td>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 4</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Tyrrell Hatton E
 Not started</td>
-      <td>Corey Conners E
+      <td class="greyout leftborder">Corey Conners E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 1</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 3</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -194,30 +210,30 @@ Not started</td>
 Not started</td>
       <td>Dustin Johnson E
 Not started</td>
+      <td>Justin Thomas E
+E thru 4</td>
       <td>Corey Conners E
 Not started</td>
-      <td>Louis Oosthuizen E
-E thru 1</td>
       <td class="greyout leftborder">Russell Henley E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 1</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-Not started</td>
+E thru 3</td>
+      <td>Cameron Smith E
+E thru 6</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Sam Burns E
 Not started</td>
-      <td>Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Corey Conners E
+      <td class="greyout">Corey Conners E
 Not started</td>
-      <td class="greyout">Cameron Smith +2
-+2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -233,45 +249,45 @@ Not started</td>
       <td class="greyout leftborder">Patrick Reed E
 Not started</td>
       <td class="greyout">Luke List +2
-+2 thru 5</td>
++2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland(W) E
 Not started</td>
+      <td>Justin Thomas E
+E thru 4</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Patrick Cantlay E
+      <td class="greyout leftborder">Patrick Cantlay E
 Not started</td>
-      <td class="greyout leftborder">Sungjae Im E
+      <td class="greyout">Sungjae Im E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 4</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Scottie Scheffler E
-Not started</td>
+E thru 3</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td>Tony Finau E
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 1</td>
+      <td class="greyout leftborder">Tony Finau +1
++1 thru 4</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 3</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-Not started</td>
+E thru 3</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Brooks Koepka E
@@ -281,55 +297,55 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 3</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
+      <td>Cameron Smith(W) E
+E thru 6</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td>Rory McIlroy E
+      <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay E
+      <td class="greyout">Patrick Cantlay E
 Not started</td>
-      <td class="greyout">Cameron Smith(W) +2
-+2 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">0</td>
-      <td>Tommy Fleetwood(W) -1
--1 thru 3</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td>Justin Thomas +1
-+1 thru 1</td>
-      <td class="greyout leftborder">Joaquin Niemann +1
-+1 thru 1</td>
-      <td class="greyout">Cameron Smith +2
-+2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 4</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td>Corey Conners E
+      <td class="greyout leftborder">Corey Conners E
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen E
-E thru 1</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 1</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 4</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Cameron Smith E
+E thru 6</td>
+      <td class="greyout leftborder">Will Zalatoris E
+Not started</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
@@ -344,8 +360,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout">Tony Finau E
-Not started</td>
+      <td class="greyout">Tony Finau +1
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -366,34 +382,18 @@ Not started</td>
     <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">0</td>
+      <td>Cameron Smith(W) E
+E thru 6</td>
       <td>Corey Conners E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td>Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas +1
-+1 thru 1</td>
-      <td class="greyout">Cameron Smith(W) +2
-+2 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">1</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td>Justin Thomas(W) +1
-+1 thru 1</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 thru 3</td>
-      <td class="greyout">Cameron Smith +2
-+2 thru 2</td>
+      <td class="greyout">Justin Thomas E
+E thru 4</td>
     </tr>
   </tbody>
 </table>
